# climagent

./: .gitignore  README.md  pyproject.toml
evaluation/: evaluate.py  metrics.py  queries.json  repetition_rate.py  success_rate.py
notebooks/: climagent CCKP.ipynb  climagent ERA + Lida.ipynb
src/: utils.py
src/climagent/: cckp.py
src/climagent/agent/: climagent.py  prefix.py  suffix.py
src/climagent/state/: agent_state.py  dataset_memory.py  dataset_state.py  json_memory.py  json_state.py
src/climagent/tools/: json_tools.py  xarray_tools.py  xarray_tools_aggregating.py  xarray_tools_grouping.py  xarray_tools_indexing.py  xarray_tools_look.py
src/scripts/: climatology_archive.py
test/: test_grouping.py  test_json_tools.py
tutorials/: climagent.ipynb
