[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climagent"
dynamic = ["version"]
description = "AI Autonous Agent for climate data analysis"
readme = "README.md"
authors = [
    { name = "Jacopo Grassi", email = "jacopo.grassi@polito.it" }
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}